--- a/frontend/package.json
+++ b/frontend/package.json
@@ -8,25 +8,26 @@
     "build": "vite build",
     "preview": "vite preview",
     "lint": "eslint . --ext .vue,.js,.jsx,.cjs,.mjs --fix --ignore-path .gitignore",
-    "test": "cypress open"
+    "test": "cypress open",
+    "test-report": "cypress run --browser chrome --spec 'cypress/**/*.cy.js'"
   },
   "dependencies": {
-    "express": "^4.18.2",
-    "jwt-decode": "^3.1.2",
+    "express": "^4.18.3",
+    "jwt-decode": "^4.0.0",
     "process": "^0.11.10",
     "util": "^0.12.5",
-    "vue": "^3.2.45",
-    "vue-router": "^4.1.6"
+    "vue": "^3.4.21",
+    "vue-router": "4.3.0"
   },
   "devDependencies": {
-    "@rushstack/eslint-patch": "^1.1.4",
-    "@vitejs/plugin-vue": "^3.2.0",
-    "@vue/eslint-config-prettier": "^7.0.0",
-    "cypress": "^12.8.1",
-    "eslint": "^8.22.0",
-    "eslint-plugin-cypress": "^2.12.1",
-    "eslint-plugin-vue": "^9.3.0",
-    "prettier": "^2.7.1",
-    "vite": "^3.2.4"
+    "@rushstack/eslint-patch": "^1.7.2",
+    "@vitejs/plugin-vue": "5.0.4",
+    "@vue/eslint-config-prettier": "^9.0.0",
+    "cypress": "^13.7.0",
+    "eslint": "^8.57.0",
+    "eslint-plugin-cypress": "^2.15.1",
+    "eslint-plugin-vue": "^9.23.0",
+    "prettier": "^3.2.5",
+    "vite": "^5.1.6"
   }
 }
