--- a/frontend/package.json
+++ b/frontend/package.json
@@ -9,7 +9,7 @@
     "preview": "vite preview",
     "lint": "eslint . --ext .vue,.js,.jsx,.cjs,.mjs --fix --ignore-path .gitignore",
     "test": "cypress open",
-    "test-report": "cypress run --browser chrome --spec 'cypress/**/*.cy.js'"
+    "test-report": "rm -f mochawesome.json && rm -rf cypress/results && rm -rf mochawesome-report && cypress run --browser chrome || true && npx mochawesome-merge 'cypress/results/*.json' > mochawesome.json && npx marge mochawesome.json"
   },
   "dependencies": {
     "express": "^4.18.3",
@@ -27,6 +27,9 @@
     "eslint": "^8.57.0",
     "eslint-plugin-cypress": "^2.15.1",
     "eslint-plugin-vue": "^9.23.0",
+    "mochawesome": "^7.1.3",
+    "mochawesome-merge": "^4.3.0",
+    "mochawesome-report-generator": "^6.2.0",
     "prettier": "^3.2.5",
     "vite": "^5.1.6"
   }
