--- a/frontend/package.json
+++ b/frontend/package.json
@@ -9,7 +9,7 @@
     "preview": "vite preview",
     "lint": "eslint . --ext .vue,.js,.jsx,.cjs,.mjs --fix --ignore-path .gitignore",
     "test": "cypress open",
-    "test-report": "rm -f mochawesome.json && rm -rf cypress/results && rm -rf mochawesome-report && cypress run --browser chrome || true && npx mochawesome-merge 'cypress/results/*.json' > mochawesome.json && npx marge mochawesome.json"
+    "test-report": "rm -f mochawesome.json && rm -rf cypress/results mochawesome-report && cypress run --browser chrome || true && npx mochawesome-merge 'cypress/results/*.json' > mochawesome.json && npx marge mochawesome.json"
   },
   "dependencies": {
     "express": "^4.18.3",
