--- a/backend/package.json
+++ b/backend/package.json
@@ -5,8 +5,7 @@
   "module": "index.js",
   "description": "",
   "scripts": {
-    "start": "nodemon server.js",
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "start": "nodemon server.js"
   },
   "keywords": [],
   "author": "",
